# 06-GADTs

./: .hlint.yaml  GADTs.hs  RedBlackGADT0.hs  RedBlackGADT1.hs  RedBlackGADT2.hs  RedBlackGADT3.hs  cis552-GADTs.cabal
